# PromptToolKit

./: .gitignore  README.md  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml
ProgressCheck/: Step1  Step2  Step3 ClaudePlan  Step4
apps/desktop/: drizzle.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/drizzle/: schema.ts
apps/desktop/drizzle/migrations/: 0001_init.sql
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_ai_runs.sql  0003_prompt_starred.sql  0004_prompt_tags.sql  0005_project_custom_tags.sql  0006_reference_prompt.sql  0007_output_prompt.sql
apps/desktop/src-tauri/src/: assets.rs  attribution.rs  clipboard.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
apps/desktop/src-tauri/src/ai/: client.rs  prompts.rs
apps/desktop/src-tauri/src/ai/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  openai_compatible.rs
apps/desktop/src-tauri/src/commands/: ai_provider.rs  ai_run.rs  clipboard_cmd.rs  mod.rs  output.rs  project.rs  prompt.rs  reference.rs  snippet.rs  vision.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/repo/: ai_repo.rs  ai_run_repo.rs  mod.rs  output_repo.rs  project_repo.rs  prompt_repo.rs  reference_repo.rs  snippet_repo.rs
apps/desktop/src/components/: CenterEditor.tsx  LeftNav.tsx  RightActivityBar.tsx  RightPanel.tsx
apps/desktop/src/lib/: tagTaxonomy.ts  (+1 more)
(+18 files in other folders)
